Wed Aug 10 06:11:13 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS: Finalise 1.2.7.

Tue Aug 09 08:53:03 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Initial update for 1.2.7.

Mon Aug 08 04:13:26 GMT 2011  Olly Betts <olly@survex.com>

	* java-swig/SmokeTest.java: Add test that string passing is zero byte
	  safe.

Mon Aug 08 04:06:20 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* java/SmokeTest.java: Add test that string passing is zero byte safe.

Mon Aug 08 03:54:07 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* java/SmokeTest.java,java-swig/SmokeTest.java: Fix == comparisons
	  with literal strings.

Mon Aug 08 03:46:16 GMT 2011  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* java/SmokeTest.java,java-swig/SmokeTest.java: Fix
	  MyExpandDecider.accept to really check the passed parameter.

Mon Aug 08 01:19:21 GMT 2011  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* php/smoketest.php: Install an error handler so the test fails if
	  there are any errors, warnings, notices, etc.

Mon Aug 08 01:13:40 GMT 2011  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* xapian.i: Don't return iterator from C# Next() and Prev() methods by
	  reference as that results in it being eligible for garbage collection
	  while we're still using it.
	* csharp/SmokeTest.cs: Add regression test.

Mon Aug 08 01:07:43 GMT 2011  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* lua/docs/examples/simpleexpand.lua,
	  lua/docs/examples/simplematchdecider.lua,
	  lua/docs/examples/simplesearch.lua,lua/docs/index.html,
	  lua/smoketest.lua,lua/util.i: Merge latest Lua changes from Xiaona
	  Han.
	* lua/util.i: Whitespace tweaks.

Mon Aug 08 00:52:16 GMT 2011  Olly Betts <olly@survex.com>

	* lua/docs/examples/simplematchdecider.lua: Actually add new
	  example.

Mon Aug 08 00:48:08 GMT 2011  Olly Betts <olly@survex.com>

	* Backport changes from trunk: